# imgui_app

./: CMakeLists.txt  README.md
src/: imgui_app.cpp  imgui_app.h  sample_app.cpp
src/imgui/backends/: imgui_impl_sdl2.cpp  imgui_impl_sdlrenderer2.cpp
src/imgui/examples/example_sdl2_sdlrenderer2/: main.cpp
